src/test/BadAnnotations3/BadAnnotations3.expected
error: BadAnnotations3.panda:4:5: annotation '@thread' is not supported on methods
error: BadAnnotations3.panda:4:5: annotation '@readonly' is not supported on methods
2 errors
