src/test/BadAnnotations3/BadAnnotations3.panda
class Foo {
    @readonly
    @thread
    method m() {
    }
}